# einwurf

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  config_example.toml
.github/workflows/: docker-publish.yml
src/: config.rs  discord.rs  main.rs  mattermost.rs  notion.rs
