[package]
name = "einwurf"
version = "0.2.0"
authors = ["Jochen Kupperschmidt"]
edition = "2021"
rust-version = "1.67.0"
description = "Minimal unauthenticated web UI to accept and forward notes"
readme = "README.md"
homepage = "https://homework.nwsnet.de/releases/e1ff/#einwurf"
repository = "https://github.com/homeworkprod/einwurf"
license = "MIT"
keywords = ["notion", "webhook"]

[dependencies]
anyhow = "1.0"
axum = "0.6.4"
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "~1.24", features = ["full"] }
toml = "0.7"
